--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -10,8 +10,8 @@
     --outlinegray: #dadada;
     --million-progress-bar-color: var(--secondary);
     --highlighted: #8446ff88;
-    --header: #bca1ff;
-    --title: rgb(134, 42, 232);
+    --header: #c1c1c1; //#bca1ff
+    --title: rgb(204,230,255); //rgb(134, 42, 232);
     --scrollbar: gray;
     --scrollbar-track: #DDD;
 }
@@ -28,7 +28,7 @@
     --outlinegray: #343434 !important;
     --highlighted: #574010;
     --header: #7838f8;
-    --title: rgb(255, 108, 196);
+    --title: rgb(132,222,2); //rgb(255, 108, 196);
     --scrollbar: rgb(177, 177, 177);
     --scrollbar-track: rgb(51, 51, 51);
 }
