--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -27,7 +27,7 @@
     --lightgray: #292633 !important;
     --outlinegray: #343434 !important;
     --highlighted: #574010;
-    --header: #7838f8;
+    --header: #7d7d7d//#7838f8;
     --title: rgb(132,222,2); //rgb(255, 108, 196);
     --scrollbar: rgb(177, 177, 177);
     --scrollbar-track: rgb(51, 51, 51);
