--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -3,7 +3,7 @@
     --dark: #080808; //#141021; //mostly black
     --secondary: #f2f3f4; //#7c00ce; //anti flash white //next: try #dddddd
     --tertiary: #000000; //#ff38e4; //black
-    --visited: #afbfc9; //grayish blue 
+    --visited: #000000; //#afbfc9; //grayish blue //now it's black
     --primary: #c2b2b2; //#f28482; //gray with red tint
     --gray: #3f3f3f;
     --lightgray: #f0f0f0;
