--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -11,7 +11,7 @@
     --million-progress-bar-color: var(--secondary);
     --highlighted: #8446ff88; //?
     --header: #c1c1c1; //#bca1ff
-    --title: rgb(204,230,255); //rgb(134, 42, 232);
+    --title: rgb(1,1,1); //rgb(204,230,255); //rgb(134, 42, 232); //black...
     --scrollbar: gray;
     --scrollbar-track: #DDD;
 }
