--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -21,13 +21,13 @@
     --dark: #000000 !important; //#f7f2fa !important; //reallyblack
     --secondary: #545b5e !important; //#d199ff !important; //GRAYish
     --visited: #181a1b !important; //#e0aeff !important; //black
-    --tertiary: #181a1b !important; //#e0aeff !important; //black                                       //#e8e6e3 !important; //#92a8ff !important; //wan white 
+    --tertiary: #181a1b !important; //#e0aeff !important; //black                                  
     --primary: #445b5e !important; //#f58382 !important; //muted forest green
     --gray: #b4acac !important; //#d4d4d4 !important; //another shade of gray 
     --lightgray: #d8d4d4 !important; //#292633 !important; 
     --outlinegray: #242729 !important; //#343434 !important;
     --highlighted: #fffdd0; //#848484; //#574010; //cream 
-    --header: #070707; //#7d7d7d//#7838f8; //black
+    --header: #dddddd; //white                                          //#070707; //#7d7d7d//#7838f8; //black
     --title: rgb(245,245,245); //rgb(132,222,2); //rgb(255, 108, 196); //vivid green //white smoke
     --scrollbar: rgb(177, 177, 177); // gray 
     --scrollbar-track: rgb(245,245,245); //rgb(51, 51, 51); //very dark gray, kinda ugly  //white smoke
