--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -1,7 +1,7 @@
 :root {
     --light: #faf8f8;
     --dark: #080808; //#141021; //mostly black
-    --secondary: #f2f3f4; //#7c00ce; //anti flash white //next: try #dddddd
+    --secondary: #dddddd; //white  
     --tertiary: #000000; //#ff38e4; //black
     --visited: #000000; //#afbfc9; //grayish blue //now it's black
     --primary: #c2b2b2; //#f28482; //gray with red tint
@@ -19,16 +19,16 @@
 [saved-theme="dark"] {
     --light: #202324 !important; //#1e1e21 !important; //yet another shade of black 
     --dark: #000000 !important; //#f7f2fa !important; //reallyblack
-    --secondary: #545b5e !important; //#d199ff !important; //GRAYish
+    --secondary: #545b5e !important; //GRAYish
     --visited: #181a1b !important; //#e0aeff !important; //black
     --tertiary: #181a1b !important; //#e0aeff !important; //black                                  
     --primary: #445b5e !important; //#f58382 !important; //muted forest green
     --gray: #b4acac !important; //#d4d4d4 !important; //another shade of gray 
-    --lightgray: #d8d4d4 !important; //#292633 !important; 
-    --outlinegray: #242729 !important; //#343434 !important;
+    --lightgray: #d8d4d4 !important; 
+    --outlinegray: #dddddd !important; //white  //#242729 !important; 
     --highlighted: #fffdd0; //#848484; //#574010; //cream 
-    --header: #dddddd; //white                                          //#070707; //#7d7d7d//#7838f8; //black
-    --title: rgb(245,245,245); //rgb(132,222,2); //rgb(255, 108, 196); //vivid green //white smoke
-    --scrollbar: rgb(177, 177, 177); // gray 
-    --scrollbar-track: rgb(245,245,245); //rgb(51, 51, 51); //very dark gray, kinda ugly  //white smoke
+    --header: #afbfc9; //grayish blue        #dddddd; //white   //the bar at the top                                       //#070707; //black
+    --title: rgb(245,245,245);  //rgb(255, 108, 196); //vivid green   //white smoke
+    --scrollbar: rgb(1,1,1); // black
+    --scrollbar-track: rgb(245,245,245); //white smoke
 }
