--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -17,18 +17,18 @@
 }
 
 [saved-theme="dark"] {
-    --light: #202324 !important; //#1e1e21 !important; //yet another shade of black 
+    --light: #fffdd0 !important;  //cream 
     --dark: #000000 !important; //#f7f2fa !important; //reallyblack
     --secondary: #545b5e !important; //GRAYish
-    --visited: #181a1b !important; //#e0aeff !important; //black
+    --visited: #181a1b !important; //black
     --tertiary: #181a1b !important; //#e0aeff !important; //black                                  
     --primary: #445b5e !important; //#f58382 !important; //muted forest green
     --gray: #b4acac !important; //#d4d4d4 !important; //another shade of gray 
     --lightgray: #d8d4d4 !important; 
     --outlinegray: #dddddd !important; //white  //#242729 !important; 
-    --highlighted: #fffdd0; //#848484; //#574010; //cream 
-    --header: #afbfc9; //grayish blue        #dddddd; //white   //the bar at the top                                       //#070707; //black
+    --highlighted: #fffdd0;  //cream 
+    --header: #545b5e !important;          //the bar at the top                                       //#070707; //black
     --title: rgb(245,245,245);  //rgb(255, 108, 196); //vivid green   //white smoke
-    --scrollbar: rgb(1,1,1); // black
+    --scrollbar: rgb(245,245,245); //white smoke
     --scrollbar-track: rgb(245,245,245); //white smoke
 }
