--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -17,7 +17,7 @@
 }
 
 [saved-theme="dark"] {
-    --light: #fffdd0 !important;  //cream 
+    --light: #b4acac !important; //gray 
     --dark: #000000 !important; //#f7f2fa !important; //reallyblack
     --secondary: #545b5e !important; //GRAYish
     --visited: #181a1b !important; //black
