--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -17,7 +17,7 @@
 }
 
 [saved-theme="dark"] {
-    --light: #0a0b0b !important; //dark 
+    --light: #1d2020 !important; //background color when darkmode is on
     --dark: #000000 !important; //#f7f2fa !important; //reallyblack
     --secondary: #545b5e !important; //GRAYish
     --visited: #181a1b !important; //black
