rmv'd template material in content, font change, local preview fix --ignoreCache

--- a/assets/_fonts.scss
+++ b/assets/_fonts.scss
@@ -1,10 +1,10 @@
 // Replace this with your own font imports!
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=IBM+Plex+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-  --font-body: "IBM Plex Sans", sans-serif;
-  --font-header: "IBM Plex Sans", sans-serif;
-  --font-mono: "Fira Code", monospace;
+  --font-body: "Athiti", sans-serif;
+  --font-header: "Athiti", sans-serif;
+  --font-mono: "Athiti", sans-serif;
 }
 
 // Example local font declaration
